--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -56,9 +56,11 @@ services:
       - ASPNETCORE_HTTPS_PORTS=8081
       - ConnectionStrings__Database=Server=basketdb;Port=5432;Database=BasketDb;User Id=postgres;Password=postgres;Include Error Detail=true
       - ConnectionStrings__Redis=distributedcache:6379
+      - DiscountGrpcSettings__DiscountUrl=https://discount.grpc:8081
     depends_on:
     - distributedcache
     - basketdb
+    - discount.grpc
 
     ports:
       - "6001:8080"
