--- a/Services/Ordering/Oredring.Api/appsettings.json
+++ b/Services/Ordering/Oredring.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Server=localhost;Database=OrderDB;User Id=sa;Password=P@ssw0rd;TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
