--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -31,6 +31,18 @@ services:
   restart: always
   ports:
   -  "6379:6379"
+
+ orderdb:
+  container_name: orderdb
+  environment:
+    - ACCEPT_EULA=Y
+    - MSSQL_SA_PASSWORD=P@ssw0rd
+  restart: always
+  ports:
+      - "1433:143"
+   
+
+
   
 
    
